src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account_Match__c</fullName>
        <description>References Best Matched Account field to determine if there is a match.</description>
        <formula>NOT(ISBLANK( Best_Matched_Account__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Best_Matched_Account__r.Owner.FirstName + &quot; &quot; + Best_Matched_Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Matched_Account_Owner_ID__c</fullName>
        <description>The OwnerID of the best matched account</description>
        <formula>Best_Matched_Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account match based on email domain</description>
        <inlineHelpText>Account match based on email domain</inlineHelpText>
        <label>Best Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Best Matched Account)</relationshipLabel>
        <relationshipName>MS_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDR_Signal__c</fullName>
        <formula>IF(ISBLANK(Best_Matched_Account__c),null,Best_Matched_Account__r.BDR_Signal__c)</formula>
        <label>BDR Signal</label>
        <type>Text</type>
    </fields>
    <fields>
    <fullName>Business_Phone_Number__c</fullName>
        <label>Business Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <formula>IF( 
    Contains(Email, &quot;gmail&quot;)|| 
    Contains(Email, &quot;yahoo&quot;)|| 
    Contains (Email, &quot;hotmail&quot;)|| 
    Contains (Email, &quot;aol&quot;) || 
    Contains (Email, &quot;comcast&quot;) || 
    Contains (Email, &quot;bellsouth&quot;) || 
    Contains (Email, &quot;verizon&quot;) || 
    Contains (Email, &quot;msn&quot;) || 
    Contains (Email, &quot;rollins&quot;) || 
    Contains (Email, &quot;att&quot;) || 
    Contains (Email, &quot;cox&quot;) || 
    Contains (Email, &quot;scbglobal&quot;) || 
    Contains (Email, &quot;earthlink&quot;) || 
    Contains (Email, &quot;icloud&quot;) || 
    Contains (Email, &quot;optonline&quot;) || 
    Contains (Email, &quot;ymail&quot;) || 
    Contains (Email, &quot;charter&quot;) || 
    Contains (Email, &quot;outlook&quot;), 
    NULL, 
    SUBSTITUTE(Email, LEFT(Email,FIND(&quot;@&quot;,Email)),NULL) 
    )</formula>
        <inlineHelpText>Email domain of the lead</inlineHelpText>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Email_Domain__c</fullName>
        <description>True if a domain is believed to be from a free email provider to suppress from Lead-to-Account matching automation.</description>
        <formula>IF( 
Contains (Email, "gmail")|| 
Contains (Email, "google")|| 
Contains (Email, "googlemail")||
Contains (Email, "yahoo")|| 
Contains (Email, "yahoo.co.uk")||
Contains (Email, "hotmail")|| 
Contains (Email, "hotmail.co.uk")|| 
Contains (Email, "aol") || 
Contains (Email, "comcast.net") || 
Contains (Email, "bellsouth") || 
Contains (Email, "verizon") || 
Contains (Email, "msn") || 
Contains (Email, "mac.com") ||
Contains (Email, "me.com") || 
Contains (Email, "mail.com") || 
Contains (Email, "rollins") || 
Contains (Email, "att.net") || 
Contains (Email, "cox") || 
Contains (Email, "live.com") || 
Contains (Email, "scbglobal") || 
Contains (Email, "earthlink") || 
Contains (Email, "icloud") || 
Contains (Email, "optonline") || 
Contains (Email, "ymail") || 
Contains (Email, "charter") || 
Contains (Email, "gmx.com") || 
Contains (Email, "outlook"), 
TRUE,FALSE 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Email Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Type__c</fullName>
        <description>The Type of the Best Matched Account</description>
        <formula>TEXT(Best_Matched_Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matched Account Type</label>
        <type>Text</type>
    </fields>
</CustomObject>